• hecker-parallel/skript.latex   · Ich habe jetzt gefunden, dass es bereits die Befehle für Input und Output     vordefiniert gibt. Alle Algorithmen darauf umgestellt.
git-svn-id: https://svn.lug-jena.de/uni-skripte@717 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/hecker-parallel/skript.latex
+++ b/hecker-parallel/skript.latex
@@ -104,8 +104,6 @@
 \def\@thmcountersep{/}
 \makeatother
 
-\SetKwInOut{Input}{INPUT}
-\SetKwInOut{Output}{OUTPUT}
 \SetKwFor{Forpar}{for}{pardo}{endfor}
 
 \newcommand*{\help}[1]{\textcolor{green}{help: #1}}
@@ -430,9 +428,9 @@ zulassen:
 
   \begin{algorithm}
     \caption{\todo{hier muss nen Name hin}}
-    \Input{$A_{(n,n)}, \vec{x}$, Prozessorzahl $i$, $p$ Anzahl der
+    \KwIn{$A_{(n,n)}, \vec{x}$, Prozessorzahl $i$, $p$ Anzahl der
       Prozessoren ($r:=\frac{n}{p}\in\Z$)}
-    \Output{\todo{Was ist die Ausgabe?}}
+    \KwOut{\todo{Was ist die Ausgabe?}}
 
     globalread( $x , z$ )\; \tcc*{Alle Prozessoren lesen diesen Vektor}
     globalread( $A((i-1) r + 1 : ir , 1:n ), B$)\;
@@ -938,8 +936,8 @@ aller Folgenglieder.
 \end{gather*}
 
 \begin{algorithm}
-  \Input{Feld $A$ der Länge $n=2^r$}
-  \Output{Feld $S$ der Länge $n$ mit $s_{k}=\sum_{j=1}^{k} a_{j}$ -- Präfixsummen}
+  \KwIn{Feld $A$ der Länge $n=2^r$}
+  \KwOut{Feld $S$ der Länge $n$ mit $s_{k}=\sum_{j=1}^{k} a_{j}$ -- Präfixsummen}
 
   \Forpar{j := 1 \KwTo  n}{$b_{0,j} := a_{j}$}
   \For{h := 1 \KwTo log(n)}{
@@ -1059,9 +1057,9 @@ selbst. \autoref{fig:wald}
   \caption{Pointer jumping}
   \label{alg:ptr-jmp}
   \dontprintsemicolon
-  \Input{$n$-dimensionales Feld~$F$, wobei $f_{i}=j$, wenn $j$ der Vater
+  \KwIn{$n$-dimensionales Feld~$F$, wobei $f_{i}=j$, wenn $j$ der Vater
     von $i$ ist}
-  \Output{$n$-dim.\,Feld~$S$, wobei $s_{i}=j$, wenn $j$ die Wurzel des
+  \KwOut{$n$-dim.\,Feld~$S$, wobei $s_{i}=j$, wenn $j$ die Wurzel des
     Baums ist, in dem $i$ steht}
 
   \Forpar{i := 1 \KwTo n}%
@@ -1115,9 +1113,9 @@ Wurzelknoten die erste Zahl und der Blattknoten die letzte Zahl ist.
   \caption{Pointer Jumping mit Knotengewichten}
   \label{alg:par-pref}
   \dontprintsemicolon
-  \Input{zwei $n$-dim.\,Felder~$F,W$, wobei $w_i$ das Gewicht am Knoten~$i$
+  \KwIn{zwei $n$-dim.\,Felder~$F,W$, wobei $w_i$ das Gewicht am Knoten~$i$
     ist und $f_{i}=j$, wenn $j$ der Vater von $i$ ist}
-  \Output{$n$-dim.\,Feld~$P$, wobei $p_{i}$ die Summe der Gewichte auf dem
+  \KwOut{$n$-dim.\,Feld~$P$, wobei $p_{i}$ die Summe der Gewichte auf dem
     Pfad von Knoten~$i$ zur Wurzel ist}
 
   \Forpar{i := 1 \KwTo n}%
@@ -1217,8 +1215,8 @@ Die konvexe Hülle ist das kleinste Polygon das alle Punkte aus $S$.
 
 \begin{algorithm}
   \caption{Bestimmen der oberen konvexen Hülle einer Punktmenge~$S$ -- $UCH(S)$}
-  \Input{Punktmenge $S\subset \mathbb{R}^2$, nach $x$ sortiert}
-  \Output{Obere konvexe Hülle von $S$}
+  \KwIn{Punktmenge $S\subset \mathbb{R}^2$, nach $x$ sortiert}
+  \KwOut{Obere konvexe Hülle von $S$}
 
   \uIf{$n \leq 4$}{bestimme $UCH(S)$ durch einfaches Durchsuchen aller Tupel}
   \Else{teile $S$ in $S_1 = \{p_1, \ldots , p_{\frac{n}{2}}\}$ und
