- Einleitung komplexe Fkt.
git-svn-id: https://svn.lug-jena.de/uni-skripte@725 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/schmeisser-ana3/skript.latex
+++ b/schmeisser-ana3/skript.latex
@@ -4697,7 +4697,19 @@ Lösungsmethode:
 
 % 18.1.06
 \chapter{Komplexe Funktionen}
+
+In diesem Kapitel beschäftigen wir uns mit differenzierbaren
+komplexwertigen Funktionen komplexer Variablen. Dieser Bereich ist in
+sehr vielen Teilbereichen der Mathematik nützlich. Insbesondere wird
+man diesen in der Zahlentheorie und der angewandten Mathematik
+wiederfinden.
+
 \section{Komplexe Differenzierbarkeit}
+
+Der Differenzierbarkeitsbegriff der eindimensionalen reellen Analysis
+wird in der Funktionentheorie zur komplexen Differenzierbarkeit
+erweitert.
+
 \subsection{Definition und Grundregeln}
 
 \begin{bemerk}
@@ -4980,7 +4992,8 @@ D\rightarrow\R, D\subset\R^{2}$
 \begin{satz}[Potenzreihen als harmonische
   Funktionen]\label{satz:10.1.2/6}
   Es sei $f(z) := \sum_{k=0}^{\infty} a_{k}(z-z_{0})^{k}$ für
-  $\abs{z-z_{0}}<R$ ($R$ \emph{Konvergenzradius} der Potenzreihe).
+  $\abs{z-z_{0}}<R$. Dabei ist $R$  der \emph{Konvergenzradius} der
+  Potenzreihe.
 
   Dann gilt:
   \begin{enumerate}
