- kleinere Fehler entfernt
git-svn-id: https://svn.lug-jena.de/uni-skripte@729 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/schmeisser-ana3/skript.latex
+++ b/schmeisser-ana3/skript.latex
@@ -5318,7 +5318,9 @@ Zu Beginn einige Wiederholungen:
     $G_{k}$ Gebiete, die paarweise disjunkt sind.
 
     \obda $G$ sei ein Gebiet. Es gilt (1) $\Rightarrow$ (2) wegen
-    \autoref{satz:1022-3}, (2) $\Rightarrow$ (3) ist klar.
+    \autoref{satz:1022-3}, (2) $\Rightarrow$ (3) ist klar\footnote{Wenn
+    man $-\Gamma'$ betrachtet, hat man zusammen mit $\Gamma$ eine
+    geschlossene Kurve.}.
 
     zeigen: (3) $\Rightarrow$ (1). Es sei $z\in G, \epsilon>0$,
     $\exists\delta >0\,\forall w\in K_{\delta}(z)\colon \abs{f(z)-f(w)}\leq
@@ -5379,7 +5381,7 @@ $\int_{\Gamma} f(z)\,dz =0$.
       \frac{1}{2}d\Delta$ (Durchmesser des Dreiecks)
     \end{itemize}
 
-    Iteration (gleiche Prozedur mit $\Delta_{1}$ stelle von
+    Iteration (gleiche Prozedur mit $\Delta_{1}$ anstelle von
     $\Delta$,\ldots). Bekommen daraus eine Folge von Dreiecken
     $(\Delta_{j})_{j}$ ($j\in\N$) mit:
     \begin{enumerate}
@@ -5466,7 +5468,7 @@ $\int_{\Gamma} f(z)\,dz =0$.
         \abs{\int_{\partial\Delta_{1}} h(z)\,dz} \leq \sup_{z\in\Delta}
            \abs{h(z)} L(\partial \Delta_{1}) \rightarrow 0
       \end{gather*}
-      gegen Null, weil man das Dreieck belieb klein machen kann
+      gegen Null, weil man das Dreieck beliebig klein machen kann.
 
      \item Ist $a$ ein Punkt auf dem Rand des Dreiecks (\obda
       $a\in[z_{1},z_{2}]$), so kann man das Dreieck in zwei Dreiecke
