- Bild von Dreiecken
git-svn-id: https://svn.lug-jena.de/uni-skripte@731 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/schmeisser-ana3/skript.latex
+++ b/schmeisser-ana3/skript.latex
@@ -5363,7 +5363,31 @@ $\int_{\Gamma} f(z)\,dz =0$.
   \end{gather*}
 
   \begin{proof}
-    \todo{Bild von den vier Dreiecken}
+    \begin{figure}
+      \centering
+      \begin{pspicture}(0,0)(9,5)
+	\psline[arrows=->](0,0)(2,0)
+	\psline[arrows=->](2,0)(6,0)
+	\psline(6,0)(8,0)
+	\psline[arrows=->](8,0)(7,1)
+	\psline[arrows=->](7,1)(5,3)
+	\psline(5,3)(4,4)
+	\psline[arrows=->](4,4)(3,3)
+	\psline[arrows=->](3,3)(1,1)
+	\psline(1,1)(0,0)
+	\psline[arrows=->,linestyle=dashed](4,0)(5,1)
+	\psline[linestyle=dashed](5,1)(6,2)
+	\psline[arrows=->,linestyle=dashed](6,2)(4,2)
+	\psline[linestyle=dashed](4,2)(2,2)
+	\psline[arrows=->,linestyle=dashed](2,2)(3,1)
+	\psline[linestyle=dashed](3,1)(4,0)
+	\rput[B](2,.7){$\Delta^{1}$}
+	\rput[B](6,.7){$\Delta^{2}$}
+	\rput[B](4,2.7){$\Delta^{3}$}
+	\rput[B](4,1.1){$\Delta^{4}$}
+      \end{pspicture}
+      \caption{Konstruktion der vier Dreiecke}
+    \end{figure}
     Wir legen in das abgeschlossene Dreieck ein weiteres hinein. Die
     Eckpunkte dieses Dreiecks liegen auf den Mittelpunkten der Seiten
     des Dreiecks.
