--- a/hecker-parallel/skript.latex
+++ b/hecker-parallel/skript.latex
@@ -1340,7 +1340,7 @@ Der parallele Algorithmus ist aber nicht streng optimal, da es einen
 Algorithmus gibt, der in $O(\log\log n)$~\Time mit $O(n)$~\Work funktioniert.
 Dazu später noch einmal mehr im \autoref{sec:mischen}.
 
-\section{Pipelin-Verfahren}
+\section{Pipeline-Verfahren}
 
 Unter dem \highl{Pipeline-Verfahren} versteht man folgendes Vorgehen: Zwei
 Aufgaben~$\mathcal{A}$ und $\mathcal{B}$ werden in eine Folge von
